loading screen, added plugin

--- a/www/css/index.css
+++ b/www/css/index.css
@@ -20,6 +20,12 @@ body {
     padding: 50px;
 }
 
+.loading h1 {
+    top: 20%;
+    text-align: center;
+    display: block;
+}
+
 .main-menu {
     left: 0px;
     top: 0px;
@@ -27,6 +33,7 @@ body {
     width: 100%;
     text-align: center;
     margin: 0px;
+    display: none;
 }
 
 .main-menu div {
