--- a/www/css/index.css
+++ b/www/css/index.css
@@ -44,25 +44,34 @@ body {
     height: 33%;
 }
 
-.main-menu div.col1 a div.listen {
-    left: 0px;
-    top: 0px;
+.main-menu div a {
     height: 100%;
     width: 50%;
+    float: left;
+}
+
+.main-menu div a div {
+    height: 100%;
+    width: 100%;
+    white-space: normal;
+}
+
+.main-menu div a div h1 {
+    overflow: auto;
+}
+
+.main-menu div.col1 a div.listen {
+    background: red;
+    left: 0px;
+    top: 0px;
 }
 
 .main-menu div.col1 a div.add-mp3 {
+    background: green;
     left: 50%;
     top: 0px;
-    height: 100%;
-    width: 50%;
 }
 
 .main-menu div a div {
     display: inline-block;
-}
-
-.main-menu div a div img {
-    height: 80%;
-    width: 80%;
 }
