--- a/www/css/listen.css
+++ b/www/css/listen.css
@@ -1,25 +1,25 @@
 body {
-    padding: 0px;
+    width: 100%;
 }
 
 .top-menu {
     position: absolute;
-    height: 60px;
-    width: 100%
+    height: 50px;
+    width: 100%;
 }
 
-.top-menu span {
+.top-button {
     height: 100%
 }
 
-.top-menu .back-button {
+.back-button {
     float: left;
 }
 
-.top-menu .search {
+.search {
     float: right;
 }
 
-.top-menu span img {
+.top-menu-img {
     height: 100%;
 }
