--- a/www/css/download.css
+++ b/www/css/download.css
@@ -22,13 +22,13 @@ body {
     border: 0px;
 }
 
-.downloadUI .download-button {
+.downloadUI .download-button button {
+    margin: 0;
+    height: 100%;
+    width: 100%;
+    border: 0px;
+    border-bottom: 1px solid;
     background: orange; /* For browsers that do not support gradients */
     background: linear-gradient(to bottom right, rgba(255,165,74), rgba(255,130,0));
-    padding: 15px;
-}
-
-.downloadUI .download-button h1 {
     position: relative;
-    margin: 0;
 }
