--- a/www/css/listen/global.css
+++ b/www/css/listen/global.css
@@ -1,10 +1,9 @@
 body {
-    padding: 0x;
+    padding-top: 50px;
 }
 
 .main-menu {
     width: 100%;
-    text-align: center;
     display: flex;
     flex-direction: column;
     flex-wrap: nowrap;
@@ -12,12 +11,12 @@ body {
 
 .main-menu div {
     border-bottom: 1px solid;
+    padding: 10px 5px;
 }
 
-.main-menu div a div p {
+.main-menu div p {
     width: 100%;
     height: 100%;
-    padding: 20px 0px;
-    text-align: center;
-    text-overflow: ellipsis;
+    border: 0px;
+    margin: 0px;
 }
